# CV-ML

./: .gitignore  LICENSE  README.md
cmakeLearning/Tutorial/: CMakeLists.txt  DartConfiguration.tcl  TutorialConfig.h  TutorialConfig.h.in  tutorial.cxx
cmakeLearning/Tutorial/MathFunctions/: CMakeLists.txt
compVision/nov/12-nov/: app.py  blobs.py  capandshow.py  checkVideo.py  displayed.py  doitLive.py  work.py
compVision/nov/12-nov/Display/: display.py
openCV/CVAlgsNApps/ch1/: a_notes.md
tools/: scrape424.py  scrapePapers.py
